# cookiecutter-django-kedro-serving

./: .gitignore  cookiecutter-django-kedro-serving-sample.json  cookiecutter-django-kedro-serving.json  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
tests/: test_cookiecutter_generation.py
{{cookiecutter.project_slug}}/: .gitignore  pyproject.toml
{{cookiecutter.project_slug}}/config/settings/: base.py  production.py
{{cookiecutter.project_slug}}/node/: .nvmrc
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/users/: managers.py
